# AutoWiki

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  autowiki.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ai-reviewer.yml  backend-ci.yml  frontend-ci.yml
api/: Dockerfile  main.py  queue.py
api/routers/: chat.py  jobs.py  repos.py  wiki.py
api/ws/: jobs.py
cli/: main.py
cli/commands/: chat_cmd.py  config_cmd.py  index.py  list_repos.py  refresh.py  serve.py
docs/: 2026-03-25-improve-wiki-quality-plan.md  2026-03-27-improve-llm-retry-plan.md  2026-03-28-pipeline-refactoring-plan.md  2026-03-28-simplify-code-plan.md  improve-logging-plan.md  improve-wiki-quality-plan.md  improve-wiki-ux-plan.md
shared/: config.py  database.py  logging_config.py  models.py
tests/: conftest.py  test_config.py  test_database.py  test_integration.py
tests/api/: conftest.py  test_chat.py  test_jobs.py  test_repos.py  test_wiki.py
tests/cli/: test_cli.py
tests/worker/: test_ast_analysis.py  test_chat.py  test_dependency_graph.py  test_diagram_synthesis.py  test_embedding.py  test_ingestion.py  test_jobs.py  test_llm.py  test_mermaid_sanitize.py  test_page_generator.py  test_rag_indexer.py  test_refresh.py  test_retry.py  test_wiki_planner.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChatDrawer.tsx  ChatPanel.tsx  DependencyGraph.tsx  HeroSection.tsx  IndexForm.tsx  JobProgressBar.tsx  (+6 more)
worker/: Dockerfile  chat.py  jobs.py  main.py
(+41 files in other folders)
